# src/main/resources/openapi.yaml
@@ -57,10 +57,6 @@ paths:
       responses:
         '200':
           description: "OK"
-          content:
-            'application/json':
-              schema:
-                $ref: '#/components/schemas/RetrieveProductCatalogResponse'
 components:
   schemas:
     DomainRegistrationRequest:
